# showmehow

./: .gitignore  MANIFEST.in  Makefile  Makefile.am  autogen.sh  build-flatpak.sh  com.endlessm.Showmehow.json  com.endlessm.Showmehow.json.in  configure.ac  lessons.json  setup.py  tasks.json
completion/: showmehow
data/: com.endlessm.showmehow.gschema.xml
data/glib-2.0/schemas/: com.endlessm.showmehow.gschema.xml
debian/: changelog  control  copyright  rules  showmehow-data.install  showmehow-os-integration.install
showmehow/: lessons.json  remindmehow.py  showmehow.py
