#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([showmehow], [0.0.0], [http://www.endlessm.com])
AM_INIT_AUTOMAKE([1.12 foreign subdir-objects parallel-tests])
AM_SILENT_RULES([yes])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
